<!--
  ~     Copyright (C) 2018 rascarlo <rascarlo@gmail.com>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Arch packages</string>
    <string name="unicode_dir">\u002F</string>
    <string name="unicode_comma_whitespace">,\u0020</string>
    <string name="action_settings">Settings</string>
    <string name="formatted_filename">Filename: %1$s</string>
    <string name="formatted_version">Version: %1$s</string>
    <string name="formatted_pkgbase">Base package: %1$s</string>
    <string name="formatted_arch">Arch: %1$s</string>
    <string name="formatted_repo">Repo: %1$s</string>
    <string name="formatted_url">Upstream URL: %1$s</string>
    <string name="formatted_license">License: %1$s</string>
    <string name="formatted_groups">Groups: %1$s</string>
    <string name="formatted_maintainers">Maintainers: %1$s</string>
    <string name="formatted_packager">Packager: %1$s</string>
    <string name="formatted_compressed_size">Package size: %1$s B (%2$s)</string>
    <string name="formatted_installed_size">Installed size: %1$s B (%2$s)</string>
    <string name="formatted_build_date">Build date: %1$s</string>
    <string name="formatted_last_update">Last updated: %1$s</string>
    <string name="formatted_flag_date">Flag date: %1$s</string>
    <string name="formatted_dependencies">Dependencies (%1$d)</string>
    <string name="formatted_opt_dependencies">Optional dependencies (%1$d)</string>
    <string name="formatted_make_dependencies">Make dependencies (%1$d)</string>
    <string name="formatted_check_dependencies">Check dependencies (%1$d)</string>
    <string name="formatted_conflicts">Conflicts (%1$d)</string>
    <string name="formatted_provides">Provides (%1$d)</string>
    <string name="formatted_replaces">Replaces (%1$d)</string>
    <string name="files">Files</string>
    <string name="formatted_dirs_count">Dirs (%1$s)</string>
    <string name="formatted_files_count">Files (%1$s)</string>
    <string name="view_content">View content</string>

    <string name="package_search">Package search</string>
    <string name="keywords">Keywords</string>
    <string name="keywords_hint">Leave blank to search all packages.</string>
    <string name="name_or_description">Name or description</string>
    <string name="exact_name">Exact name</string>
    <string name="description">Description</string>
    <string name="repository">Repository</string>
    <string name="repository_hint">It is possible to use this parameter more than once in order to search in more than one repository (but note that omitting it altogether will search in all repositories).</string>
    <string name="core">Core</string>
    <string name="extra">Extra</string>
    <string name="testing">Testing</string>
    <string name="multilib">Multilib</string>
    <string name="multilib_testing">Multilib-Testing</string>
    <string name="community">Community</string>
    <string name="community_testing">Community-Testing</string>
    <string name="architecture">Architecture</string>
    <string name="architecture_hint">It is possible to use this parameter more than once in order to search for more than one architecture (but note that omitting it altogether will search for all architectures).</string>
    <string name="arch_any">any</string>
    <string name="arch_x86_64">x86_64</string>
    <string name="flag">Flag</string>
    <string name="all">All</string>
    <string name="flagged">Flagged</string>
    <string name="not_flagged">Not Flagged</string>

    <string name="design">Design</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_light">Light</string>
    <string name="links">Links</string>
    <string name="source">Source</string>
    <string name="api_wiki">API wiki</string>
    <string name="arch_linux">Arch Linux</string>
    <string name="arch_linux_packages">Arch Linux packages</string>
    <string name="source_link" translatable="false">https://github.com/rascarlo/ArchPackages</string>
    <string name="api_wiki_link" translatable="false">https://wiki.archlinux.org/index.php/Official_repositories_web_interface</string>
    <string name="arch_linux_link" translatable="false">https://www.archlinux.org/</string>
    <string name="arch_linux_packages_link" translatable="false">https://www.archlinux.org/packages/</string>
    <string name="monospace" translatable="false">monospace</string>

    <!--keywords keys-->
    <string name="key_keywords" translatable="false">key_keywords</string>
    <string name="key_keywords_default_value" translatable="false">@string/key_keywords_name_or_description</string>
    <string name="key_keywords_name_or_description" translatable="false">key_keywords_name_or_description</string>
    <string name="key_keywords_exact_name" translatable="false">key_keywords_exact_name</string>
    <string name="key_keywords_description" translatable="false">key_keywords_description</string>

    <!--repo keys-->
    <string name="key_repo_core" translatable="false">key_repo_core</string>
    <string name="key_repo_extra" translatable="false">key_repo_extra</string>
    <string name="key_repo_testing" translatable="false">key_repo_testing</string>
    <string name="key_repo_multilib" translatable="false">key_repo_multilib</string>
    <string name="key_repo_multilib_testing" translatable="false">key_repo_multilib_testing</string>
    <string name="key_repo_community" translatable="false">key_repo_community</string>
    <string name="key_repo_community_testing" translatable="false">key_repo_community_testing</string>

    <!--arch keys-->
    <string name="key_arch_any" translatable="false">key_arch_any</string>
    <string name="key_arch_x86_64" translatable="false">key_arch_x86_64</string>

    <!--flag keys-->
    <string name="key_flag" translatable="false">key_flag</string>
    <string name="key_flag_default_value" translatable="false">@string/key_flag_flagged_all</string>
    <string name="key_flag_flagged_all" translatable="false">key_flag_flagged_all</string>
    <string name="key_flag_flagged" translatable="false">key_flag_flagged</string>
    <string name="key_flag_not_flagged" translatable="false">key_flag_not_flagged</string>

    <!--theme keys-->
    <string name="key_theme" translatable="false">key_theme</string>
    <string name="key_theme_default_value" translatable="false">@string/key_theme_dark</string>
    <string name="key_theme_dark" translatable="false">key_theme_dark</string>
    <string name="key_theme_black">key_theme_black</string>
    <string name="key_theme_light" translatable="false">key_theme_light</string>
    <string name="i_use_arch_btw">I use Arch BTW</string>
</resources>
