<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_night"
        android:title="@string/theme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_main_action_theme_dark"
                    android:title="@string/theme_dark" />
                <item
                    android:id="@+id/menu_main_action_theme_black"
                    android:title="@string/theme_black" />
                <item
                    android:id="@+id/menu_main_action_theme_light"
                    android:title="@string/theme_light" />
            </group>
        </menu>
    </item>

</menu>
