<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_search_repo_label_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_search_repo_hint_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/repository_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toTopOf="@+id/fragment_search_repo_core_check_box"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_label_text_view"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_label_text_view"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_label_text_view" />

    <CheckBox
        android:id="@+id/fragment_search_repo_core_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/core"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_hint_text_view"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_hint_text_view"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_hint_text_view" />

    <CheckBox
        android:id="@+id/fragment_search_repo_extra_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/extra"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_core_check_box"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_core_check_box"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_core_check_box" />

    <CheckBox
        android:id="@+id/fragment_search_repo_testing_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/testing"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_extra_check_box"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_extra_check_box"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_extra_check_box" />

    <CheckBox
        android:id="@+id/fragment_search_repo_multilib_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multilib"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_testing_check_box"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_testing_check_box"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_testing_check_box" />

    <CheckBox
        android:id="@+id/fragment_search_repo_multilib_testing_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multilib_testing"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_multilib_check_box"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_multilib_check_box"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_multilib_check_box" />

    <CheckBox
        android:id="@+id/fragment_search_repo_community_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/community"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_multilib_testing_check_box"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_multilib_testing_check_box"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_multilib_testing_check_box" />

    <CheckBox
        android:id="@+id/fragment_search_repo_community_testing_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/community_testing"
        app:layout_constraintEnd_toEndOf="@+id/fragment_search_repo_community_check_box"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_repo_community_check_box"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_repo_community_check_box" />


</android.support.constraint.ConstraintLayout>