<!--
  ~     Copyright (C) 2018 rascarlo <rascarlo@gmail.com>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_repo_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_repo_hint_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/repository_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="@+id/search_repo_label_text_view"
            app:layout_constraintStart_toStartOf="@+id/search_repo_label_text_view"
            app:layout_constraintTop_toBottomOf="@+id/search_repo_label_text_view" />

        <CheckBox
            android:id="@+id/search_check_box_repo_core"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/core"
            app:layout_constraintEnd_toEndOf="@+id/search_repo_hint_text_view"
            app:layout_constraintStart_toStartOf="@+id/search_repo_hint_text_view"
            app:layout_constraintTop_toBottomOf="@+id/search_repo_hint_text_view" />

        <CheckBox
            android:id="@+id/search_check_box_repo_extra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/extra"
            app:layout_constraintEnd_toEndOf="@+id/search_check_box_repo_core"
            app:layout_constraintStart_toStartOf="@+id/search_check_box_repo_core"
            app:layout_constraintTop_toBottomOf="@+id/search_check_box_repo_core" />

        <CheckBox
            android:id="@+id/search_check_box_repo_testing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/testing"
            app:layout_constraintEnd_toEndOf="@+id/search_check_box_repo_extra"
            app:layout_constraintStart_toStartOf="@+id/search_check_box_repo_extra"
            app:layout_constraintTop_toBottomOf="@+id/search_check_box_repo_extra" />

        <CheckBox
            android:id="@+id/search_check_box_repo_multilib"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multilib"
            app:layout_constraintEnd_toEndOf="@+id/search_check_box_repo_testing"
            app:layout_constraintStart_toStartOf="@+id/search_check_box_repo_testing"
            app:layout_constraintTop_toBottomOf="@+id/search_check_box_repo_testing" />

        <CheckBox
            android:id="@+id/search_check_box_repo_multilib_testing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multilib_testing"
            app:layout_constraintEnd_toEndOf="@+id/search_check_box_repo_multilib"
            app:layout_constraintStart_toStartOf="@+id/search_check_box_repo_multilib"
            app:layout_constraintTop_toBottomOf="@+id/search_check_box_repo_multilib" />

        <CheckBox
            android:id="@+id/search_check_box_repo_community"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/community"
            app:layout_constraintEnd_toEndOf="@+id/search_check_box_repo_multilib_testing"
            app:layout_constraintStart_toStartOf="@+id/search_check_box_repo_multilib_testing"
            app:layout_constraintTop_toBottomOf="@+id/search_check_box_repo_multilib_testing" />

        <CheckBox
            android:id="@+id/search_check_box_repo_community_testing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/community_testing"
            app:layout_constraintEnd_toEndOf="@+id/search_check_box_repo_community"
            app:layout_constraintStart_toStartOf="@+id/search_check_box_repo_community"
            app:layout_constraintTop_toBottomOf="@+id/search_check_box_repo_community" />


    </android.support.constraint.ConstraintLayout>

</layout>