<!--
  ~     Copyright (C) 2018 rascarlo <rascarlo@gmail.com>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <import type="java.util.List" />

        <variable
            name="string"
            type="java.lang.String" />

        <variable
            name="Details"
            type="com.rascarlo.arch.packages.api.model.Details" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_text_view_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{@string/formatted_filename(Details.filename)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.filename != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_filename" />

        <TextView
            android:id="@+id/details_text_view_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_version(Details.pkgver)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.pkgver != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_version" />

        <TextView
            android:id="@+id/details_text_view_pkgbase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_pkgbase(Details.pkgbase)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.pkgbase != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_pkgbase" />

        <TextView
            android:id="@+id/details_text_view_arch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_arch(Details.arch)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.arch != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_arch" />

        <TextView
            android:id="@+id/details_text_view_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_repo(Details.repo)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.repo != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_repo" />

        <TextView
            android:id="@+id/details_text_view_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{Details.groups[0] != null ? String.format(@string/formatted_groups, TextUtils.join(@string/unicode_comma_whitespace, Details.groups)) : null}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.groups[0] != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_groups" />

        <TextView
            android:id="@+id/details_text_view_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:autoLink="all"
            android:text="@{@string/formatted_url(Details.url)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.url != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_url" />

        <TextView
            android:id="@+id/details_text_view_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{Details.licenses[0] != null ? String.format(@string/formatted_license, TextUtils.join(@string/unicode_comma_whitespace, Details.licenses)) : null}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.licenses[0] != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_license" />

        <TextView
            android:id="@+id/details_text_view_maintainers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{Details.maintainers[0] != null ? String.format(@string/formatted_maintainers, TextUtils.join(@string/unicode_comma_whitespace, Details.maintainers)) : null}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.maintainers[0] != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_maintainers" />

        <TextView
            android:id="@+id/details_text_view_packager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_packager(Details.packager)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.packager != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_packager" />

        <TextView
            android:id="@+id/details_text_view_compressed_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.compressedSize != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_compressed_size" />

        <TextView
            android:id="@+id/details_text_view_installed_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.installedSize != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_installed_size" />

        <TextView
            android:id="@+id/details_text_view_build_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_build_date(Details.buildDate)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.buildDate != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_build_date" />

        <TextView
            android:id="@+id/details_text_view_last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_last_update(Details.lastUpdate)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{Details.lastUpdate != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_last_update" />

        <TextView
            android:id="@+id/details_text_view_flag_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:text="@{@string/formatted_flag_date(Details.flagDate)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_alert_red"
            android:visibility="@{Details.flagDate != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/formatted_build_date" />

    </LinearLayout>

</layout>