<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="java.util.List" />

        <import type="java.lang.Integer" />

        <variable
            name="Files"
            type="com.rascarlo.arch.packages.api.model.Files" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_text_view_files_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/files"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/details_text_view_dirs_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{@string/formatted_dirs_count(Files.dirCount)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            tools:text="@string/formatted_dirs_count" />

        <TextView
            android:id="@+id/details_text_view_files_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{@string/formatted_files_count(Files.filesCount)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            tools:text="@string/formatted_files_count" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/details_files_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small" />

    </LinearLayout>

</layout>